# embedprobe

./: .gitignore  README.MD  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/embedprobe/: __init__.py  cli.py  data.py  embeddings.py  probe.py  taxonomy.py
src/embedprobe/levels/: __init__.py  level0.py  level1.py  level2.py  level3.py
src/embedprobe/report/: __init__.py  html.py  plots.py  result.py
tests/: test_data.py  test_levels.py  test_probe_report_cli.py
