[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embedprobe"
version = "0.0.0"
description = "A diagnostic toolkit for evaluating and selecting language-model embedding spaces."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Harish Sainath S", email = "sainathharish036@gmail.com" },
]
keywords = ["embeddings", "nlp", "evaluation", "diagnostics", "transformers", "model-selection"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Sainath26/embedprobe"